--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-redux": "^6.0.0",
+    "@types/webfontloader": "^1.6.29",
     "axios": "^0.18.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
